unpackaged/main/default/objects/OrderApi__Credit_Note__c/OrderApi__Credit_Note__c.object-meta.xml
<CustomObject>
    <description>Credit Notes track negative adjustments made to invoices.</description>
    <label>Credit Note</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>