unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_City__c</fullName>
    <description>The value of this field will be updated with the Account&#39;s Billing City or Contact&#39;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</description>
    <inlineHelpText>The value of this field will be updated with the Account&#39;s Billing City or Contact&#39;s Mailing City, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>