unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_Street__c</fullName>
    <description>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</description>
    <inlineHelpText>**System Calculated/Conditional** Billing Street derives from the Contact Mailing Street or the Account Billing Street when Calculate Billing Details is checked.</inlineHelpText>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>