unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Customer__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer__c</fullName>
    <description>**System Calculated** Link to the customer&#39;s record, controlled by the &quot;Entity&quot; field.</description>
    <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;), OrderApi__Account__r.Name, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName)</formula>
    <inlineHelpText>**System Calculated** Link to the customer&#39;s record, controlled by the &quot;Entity&quot; field.</inlineHelpText>
    <label>Customer</label>
    <type>Text</type>
</CustomField>