unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>**System Calculated/Override** The date the credit note was created.</description>
    <inlineHelpText>**System Calculated/Override** The date the credit note was created.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>