unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Number__c</fullName>
    <description>Invoice number related to the Invoice.</description>
    <formula>OrderApi__Invoice__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice number related to the Invoice.</inlineHelpText>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>