unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the credit note has been posted and transactions (journal entries) have been created.</description>
    <inlineHelpText>Checked if the credit note has been posted and transactions (journal entries) have been created.</inlineHelpText>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>