unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Posted_Date__c</fullName>
    <description>**System Calculated/Override** The date the transaction posted.</description>
    <inlineHelpText>**System Calculated/Override** The date the transaction posted.</inlineHelpText>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>