unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Number__c</fullName>
    <description>Sales Order number related to the Sales Order.</description>
    <formula>OrderApi__Sales_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Order number related to the Sales Order.</inlineHelpText>
    <label>Sales Order Number</label>
    <type>Text</type>
</CustomField>