unpackaged/main/default/objects/OrderApi__Credit_Note__c/fields/OrderApi__Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total__c</fullName>
    <description>**System Calculated** Sum of all adjustment lines</description>
    <inlineHelpText>**System Calculated** Sum of all adjustment lines</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>